syntax="proto3";

option java_package = "com.dd.server.mq";
option java_outer_classname = "MqProto";

message MsgHead
{
    int32 srcSid   = 1;
	int32 dstSid   = 2;
	int32 msgId    = 3;
	int64 sequence = 4
	int32 errCode  = 5;
	string errInfo = 6;
}